<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Note Title</string>
    <string name="text">Text</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="new_note">New Note</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
</resources>