<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".update.NoteUpdateFragment">
    <data>
        <variable
            name="noteUpdateViewModel"
            type="com.leonardomotta.noteapp.update.NoteUpdateViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <EditText
            android:id="@+id/note_title_update"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:hint="@string/note_title"
            android:text="@{noteUpdateViewModel.note.title}"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="26sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/note_text_update"/>

        <EditText
            android:id="@+id/note_text_update"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:background="@color/white"
            android:hint="@string/text"
            android:text="@{noteUpdateViewModel.note.text}"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="24sp"
            android:gravity="top|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_title_update"
            app:layout_constraintBottom_toTopOf="@+id/send_button_update" />

        <Button
            android:id="@+id/send_button_update"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/delete_button_update"
            app:layout_constraintTop_toBottomOf="@+id/note_text_update" />

        <Button
        android:id="@+id/delete_button_update"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send_button_update"
        app:layout_constraintTop_toBottomOf="@+id/note_text_update"    />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>